valign helper max-height bugfix

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -132,6 +132,7 @@ textarea {
 		content: '';
 		display: inline-block;
 		height: 100%;
+		min-height: inherit;
 		width: 0;
 		visibility: hidden;
 		vertical-align: inherit;
